# shptools

./: README.md  pyproject.toml  requirements.txt
resources/nb/: GETTING_STARTED.ipynb
src/shptools_BOULDERING/: annotations.py  geometry.py  geomorph.py  metrics.py  misc.py  shp.py
src/shptools_BOULDERING.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
